--- a/Example-Voting-App/result-app-pod.yml
+++ b/Example-Voting-App/result-app-pod.yml
@@ -4,7 +4,7 @@ metadata:
   name: result-app-pod
   labels:
     name: result-app-pod
-    app: demo-worker-app
+    app: demo-voting-app
 spec:
   containers:
     - name: result-app
